[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/connection_ii/ConnectionII.tres" type="DynamicFont" id=1]
[ext_resource path="res://Cards/Card.gd" type="Script" id=2]
[ext_resource path="res://Enemy_icon.png" type="Texture" id=3]
[ext_resource path="res://fonts/connection_ii/ConnectionII.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Cards/Description.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0745098, 0.0745098, 0.0745098, 0.807843 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0.627451, 0.627451, 0.627451, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=2]
size = 45
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="Card" type="Panel"]
margin_right = 350.0
margin_bottom = 500.0
rect_min_size = Vector2( 350, 450 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.0
margin_top = -170.0
margin_right = 149.0
margin_bottom = 48.0
texture = ExtResource( 3 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -131.0
margin_top = -225.0
margin_right = 124.0
margin_bottom = -102.0
custom_fonts/font = SubResource( 2 )
text = "Thrusters"
align = 1
autowrap = true
uppercase = true

[node name="Label" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.0
margin_top = 76.0
margin_right = 128.0
margin_bottom = 199.0
custom_fonts/font = ExtResource( 1 )
text = "Increase speed by 10%"
align = 1
autowrap = true

[node name="Description" type="RichTextLabel" parent="."]
margin_left = 47.0
margin_top = 334.0
margin_right = 325.0
margin_bottom = 480.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "Increase speed by 10%, 10%+ 10%-"
tab_size = 5
text = "Increase speed by 10%, 10%+ 10%-"
script = ExtResource( 5 )

[connection signal="gui_input" from="." to="." method="_on_Card_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_Card_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Card_mouse_exited"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
